@@ -1,3 +1,9 @@
+1998-08-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gtkhex.c (draw_shadow): set backing pixmap and clear
+	window area of the whole widget. this makes it look prettier
+	with pixmap themes ;)
+	
 1998-08-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* ui.c (create_prefs_dialog), main.c (main), ghex.h:
